--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" href="./assets/css/custom.css">
   <!-- Modernizer for Portfolio -->
   <script src="./assets/js/modernizer.js"></script>
+  <link rel='stylesheet' href='https://cdn.rawgit.com/t4t5/sweetalert/v0.2.0/lib/sweet-alert.css'>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -69,7 +70,8 @@
   <!-- all plugins -->
   <script src="./assets/js/custom.js"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
+  <script src='https://cdn.rawgit.com/t4t5/sweetalert/v0.2.0/lib/sweet-alert.min.js'></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <!-- Propeller textfield js -->
   <script type="text/javascript" src="dist/js/propeller.min.js"></script>
 
